feat(#4): implement getPayment operation, remove delete operation, fix remaining tests
