# internal/api/v1/nexiapi/api.go
@@ -22,7 +22,7 @@ type HealthReportDto struct {
 	Status string `json:"status"`
 }
 
-// PaymentLinkRequestDto struct for PaymentLinkDto
+// PaymentLinkRequestDto struct for addPaymentLink request
 type PaymentLinkRequestDto struct {
 	// The reference ID for this payment, as generated by the Payment service
 	ReferenceId string `json:"reference_id"`
@@ -36,7 +36,7 @@ type PaymentLinkRequestDto struct {
 	VatRate float64 `json:"vat_rate"`
 }
 
-// PaymentLinkDto struct for PaymentLinkDto
+// PaymentLinkDto struct for addPaymentLink response
 type PaymentLinkDto struct {
 	// The page title to be shown on the payment page.
 	Title string `json:"title"`
@@ -46,14 +46,34 @@ type PaymentLinkDto struct {
 	ReferenceId string `json:"reference_id"`
 	// The purpose of this payment process.
 	Purpose string `json:"purpose"`
-	// The amount to bill for. TODO - is this Cents or Euros?
+	// The amount to bill for in the smallest denomination.
 	AmountDue int64 `json:"amount_due"`
-	// Only used in responses. The total amount paid. TODO - is this Cents or Euros?
+	// Only used in responses. The total amount paid in the smallest denomination.
 	AmountPaid int64 `json:"amount_paid"`
-	// The currency to use.
+	// The currency to use, 3-letter code
 	Currency string `json:"currency"`
 	// The applicable VAT, in percent.
 	VatRate float64 `json:"vat_rate"`
 	// The payment link.
 	Link string `json:"link"`
+}
+
+// PaymentDto struct for getPaymentByRefId response
+type PaymentDto struct {
+	// Paygate payment id
+	Id string `json:"id"`
+	// Internal reference number for this payment process.
+	ReferenceId string `json:"reference_id"`
+	// The amount to bill for in the smallest denomination.
+	AmountDue int64 `json:"amount_due"`
+	// Only used in responses. The total amount paid in the smallest denomination.
+	AmountPaid int64 `json:"amount_paid"`
+	// The currency to use, 3-letter code
+	Currency string `json:"currency"`
+	// Status as received from Paygate. OK, AUTHORIZED, FAILED, ...
+	Status string `json:"status"`
+	// ResponseCode as received from Paygate, 8 digit response code, 00000000 for success, other codes see documentation.
+	ResponseCode string `json:"response_code"`
+	// PaymentMethod as received from Paygate, CARD, GOOGLEPAY, APPLEPAY, ...
+	PaymentMethod string `json:"payment_method"`
 }
